# hermes-band-platform

./: .gitignore  LICENSE  README.md  RELEASING.md  __init__.py  flake.nix  install.sh  plugin.yaml  pyproject.toml  release-please-config.json
.github/actions/GithubToken/: action.yaml
.github/workflows/: ci.yml  package.yml  pr-title.yml  promote-dev-to-main.yml  publish.yml  release.yml
docs/: INSTALL-PROMPT.md  install.sh  rehydration-design.md  rehydration-seed-race-design.md  rehydration.md
docs/superpowers/plans/: 2026-07-04-federated-wiki-query.md
docs/superpowers/specs/: 2026-07-04-federated-wiki-query-design.md
hermes_band_platform/: __init__.py  _band_libs.py  adapter.py  contacts.py  federation.py  plugin.yaml  tools.py
hermes_band_platform/skills/add-band/: SKILL.md
hermes_band_platform/skills/add-band/scripts/: ensure_access_policy.py  ensure_home_channel.py  gateway_python.py  register-agent.sh  register_agent.py  verify_gateway.py  verify_install.py  verify_roundtrip.py
hermes_band_platform/skills/band-collaborate/: SKILL.md
hermes_band_platform/skills/band-contacts/: SKILL.md
hermes_band_platform/skills/band-conversations/: SKILL.md
hermes_band_platform/skills/federated-wiki-search/: SKILL.md
scripts/: standalone_import_check.py  sync_root_manifest.py
tests/: conftest.py  test_adapter.py  test_add_band_skill.py  test_band_libs.py  test_collab_discovery.py  test_contacts.py  test_e2e_directory_install.py  test_federation.py  test_package_layout.py  test_tools.py
