[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-band-platform"
version = "1.0.0"
description = "Band (Thenvoi) platform adapter for the Hermes Agent gateway."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thenvoi" }]
dependencies = ["thenvoi-sdk>=0.2.9,<0.3"]

[project.optional-dependencies]
dev = ["pytest==9.0.2", "pytest-asyncio==1.3.0", "pytest-timeout==2.4.0", "ruff==0.15.10", "build"]

[project.entry-points."hermes_agent.plugins"]
band = "hermes_band_platform"

[project.urls]
Homepage = "https://github.com/thenvoi/hermes-band-platform"

[tool.setuptools.packages.find]
include = ["hermes_band_platform", "hermes_band_platform.*"]

[tool.setuptools.package-data]
hermes_band_platform = ["plugin.yaml", "skills/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
